# ontology_extractor

./: .gitignore  .scope-allowlist.txt  CHECKLIST.md  CONSTITUTION.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  ONBOARDING.md  PRODUCT_SPEC.md  README.md  SPEC_V2.md  TASKS.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: run_pipeline.sh
golden/: overrides.yaml
metadata/: README.md
rigor_sf/: config.example.yaml  config.py  cursor_cli.py  generation_cache.py  llm_provider.py  logging_config.py  metrics.py  owl.py  pipeline.py  profiling.py  prompts.py  query_gen.py  relationships.py  run_loader.py  sparql_validation.py  sql_ingest.py  sql_parser_ast.py  traverse.py
rigor_sf/metadata/: csv_meta.py
rigor_sf/retrieval/: schema_docs.py
rigor_sf/tests/: conftest.py  test_auto_approve.py  test_cli.py  test_config.py  test_cursor_cli.py  test_exit_codes.py  test_generation_cache.py  test_llm_provider.py  test_logging_config.py  test_lumina_mcp.py  test_metrics.py  test_overrides.py  test_owl.py  test_pipeline_metrics.py  test_profiling.py  test_prompts.py  test_query_gen.py  test_relation_name_validation.py  test_run_loader.py  test_sparql_validation.py  test_sql_ingest.py  (+3 more)
rigor_v1/: config.example.yaml  cursor_cli.py  db_introspect.py  exit_codes.py  logging_config.py  overrides.py  pipeline.py  query_gen.py  run_loader.py  types.py  versioning.py
scripts/: SCOPE_SAFE_DELIVERY.md  generate_local_evidence.sh  reconcile_tracking_docs.py  verify_migration.sh  verify_scope.sh
sql_worksheets/: README.md
(+94 files in other folders)
